refactor(user): 重构错误处理和proto文件配置
- 将错误处理逻辑迁移到`errs`包，并增加多语言支持
- 更新proto文件配置，使用`proto3`语法并调整`go_package`路径
- 删除冗余的错误消息生成文件，优化Makefile命令
- 调整用户服务实现，使用`emptypb.Empty`替代自定义的删除响应

--- a/apps/user/Makefile
+++ b/apps/user/Makefile
@@ -1,10 +1,10 @@
-.PHONY: gorm-gen
-gorm-gen:
-	go run ./migrate/main.go
+.PHONY: orm
+orm:
+	go run ./cmd/ormgen/main.go
 
 .PHONY: run
 run:
-	go run ./main.go
+	go run ./cmd/user-service/main.go
 
 .PHONY: test
 test:
