--- a/api/Makefile
+++ b/api/Makefile
@@ -13,6 +13,7 @@ PROTO_FILES := $(shell find $(PROTO_SRC) -name "*.proto")
 init:
 	go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 	go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+	go install github.com/favadi/protoc-go-inject-tag@latest
 	go get -u google.golang.org/grpc@latest
 	go mod tidy
 
