feat(认证服务): 新增用户认证服务及验证码功能
- 新增用户认证服务，包括登录、注册、重置密码、发送验证码、刷新token、登出和注销账号功能
- 新增验证码功能，支持生成和验证验证码
- 新增用户登录成功日志记录功能
- 更新用户模型，修复字段命名问题
- 新增用户注销请求表和用户登录成功日志表
- 更新错误码，新增系统繁忙、用户已存在、登录失败等错误码

--- a/apps/user/config.yaml
+++ b/apps/user/config.yaml
@@ -35,7 +35,7 @@ logger:
 db:
   default:
     dryRun: false # 是否空跑 (用于调试,数据不会写入数据库)
-    source: root:root@tcp(127.0.0.1:3306)/ai_shop_user?charset=utf8mb4&parseTime=True&loc=Local
+    source: root:123456@tcp(127.0.0.1:3306)/ai_shop_user?charset=utf8mb4&parseTime=True&loc=Local
     slowThreshold: 1
     maxLifeTime: 1
     maxOpenConn: 100
@@ -56,7 +56,7 @@ redis:
 
 # 业务相关
 service:
-  errAttemptLimit: 5
+  errAttemptLimit: 5 # 错误重试次数
 
 # ====================================
 # registry
