✨ feat(gateway): use grpc gateway

--- a/api/Makefile
+++ b/api/Makefile
@@ -2,7 +2,7 @@
 PROTO_SRC = proto  # proto 目录
 PB_OUT = pb        # 生成 pb.go 代码的目录
 PROTOC = protoc    # protoc 编译器
-GO_OUT = --go_out=$(PB_OUT) --go-grpc_out=$(PB_OUT) --proto_path=$(PROTO_SRC)
+GO_OUT = --go_out=$(PB_OUT) --go-grpc_out=$(PB_OUT) --proto_path=$(PROTO_SRC) --proto_path=$(PROTO_SRC)/third_party
 
 # 递归查找所有 .proto 文件
 PROTO_FILES := $(shell find $(PROTO_SRC) -name "*.proto")
@@ -13,8 +13,11 @@ PROTO_FILES := $(shell find $(PROTO_SRC) -name "*.proto")
 init:
 	go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 	go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+	go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway@latest
+	go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2@latest
 	go install github.com/favadi/protoc-go-inject-tag@latest
 	go get -u google.golang.org/grpc@latest
+	go get -u google.golang.org/genproto/googleapis/api
 	go mod tidy
 
 # 默认构建所有 proto
