--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,14 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    
         {
-            "name": "admin-service",
+            "name": "gateway",
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceRoot}/admin-service/main.go",
-            "cwd": "${workspaceRoot}/admin-service",
+            "program": "${workspaceRoot}/apps/gateway",
+            "cwd": "${workspaceRoot}/apps/gateway",
             "env": {
                 "GO111MODULE": "on",
                 "GOPROXY": "https://goproxy.cn,direct"
@@ -18,17 +19,20 @@
             "args": []
         },
         {
-            "name": "main-service",
+            "name": "user",
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceRoot}/main-service/main.go",
-            "cwd": "${workspaceRoot}/main-service",
+            "program": "${workspaceRoot}/apps/user/cmd/user-service/main.go",
+            "cwd": "${workspaceRoot}/apps/user/cmd/user-service",
             "env": {
                 "GO111MODULE": "on",
                 "GOPROXY": "https://goproxy.cn,direct"
             },
-            "args": []
+            "args": [
+                "--config",
+                "${workspaceRoot}/apps/user/config.yaml"
+            ]
         }
     ]
 }
