--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,19 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
+        {
+            "name": "frontend",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceRoot}/apps/frontend",
+            "cwd": "${workspaceRoot}/apps/frontend",
+            "env": {
+                "GO111MODULE": "on",
+                "GOPROXY": "https://goproxy.cn,direct"
+            },
+            "args": []
+        },
         {
             "name": "gateway",
             "type": "go",
