--- a/apps/gateway/config.yaml
+++ b/apps/gateway/config.yaml
@@ -48,6 +48,10 @@ redis:
 registry:
   addr: '127.0.0.1:2379'
 
+otel:
+  tracer:
+    grpcEndpoint: "127.0.0.1:4317"
+
 service:
   endpoint:
     userServer: localhost:9080
